<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:paddingTop="40dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFiltro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bgreen"
            android:text="@string/filtro" />
    </LinearLayout>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFiltroCercanos"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/bgreen"
            android:text="@string/filtroCercanos" />

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonMapArboles"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:background="@color/bgreen"
            android:text="@string/mapTodos" />

    </LinearLayout>
   
     
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/salir"
            android:layout_width="300dp"
            android:layout_gravity="center"           
            android:layout_height="wrap_content"
            android:background="@color/bgreen"
            android:text="@string/salir" />

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:paddingTop="40dp"
            android:contentDescription="@string/author"
            android:src="@drawable/imginicio" />

    </LinearLayout>

</LinearLayout>