<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pestana3">
    
     <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"        
        android:orientation="vertical" >  
		
          <Spinner
            android:id="@+id/spinnerFiltro"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="false"           
            android:prompt="@string/comun_prompt" />
          <Spinner
            android:id="@+id/spinnerFiltroProvincia"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            android:drawSelectorOnTop="false"                   
            android:prompt="@string/provincia_prompt" />
            <Button
        android:id="@+id/filtro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/bgreen"
        android:layout_marginLeft="10dip"
        android:text="@string/filtrar" />
        
    </LinearLayout>
    
     <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="fill_parent"        
        android:orientation="horizontal" >
     
    
    <fragment 
        android:id="@+id/mapview"
  		android:layout_width="match_parent"  		
  		android:layout_height="fill_parent"
  		class="com.google.android.gms.maps.SupportMapFragment"/>
  </LinearLayout>


</LinearLayout>